Fixed the spacing in index.html

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -68,7 +68,7 @@ footer p {
 
 .hero {
   text-align: center;
-  padding: 160px 20px;
+  padding: 130px 20px 130px;
 }
 
 .hero h1 {
@@ -78,13 +78,13 @@ footer p {
   padding: 15px;
 }
 
+
 .hero h2 {
   font-size: 36px;
   font-weight: bold;
-  margin: 0;
   line-height: 2;
   color: var(--primary-color);
-  margin: 180px 0 50px;
+  margin: 0;
 }
 
 .hero p {
@@ -93,6 +93,9 @@ footer p {
   color: var(--tertiary-color);
   line-height: 2;
   margin-bottom: 90px;
+}
+.homepage-projects{
+  margin: 120px 0 40px !important;
 }
 
 .hero .container {
